<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout
        android:id="@+id/groupviewDraw"
        android:layout_width="fill_parent"
        android:layout_height="514dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="86dp"
        android:layout_gravity="center"
        android:gravity="center_vertical|center_horizontal" >

        <Button
            android:id="@+id/buttonDesenhar"
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="150sp"
            android:layout_height="fill_parent"
            android:layout_marginRight="10sp"
            android:text="@string/botao_desenhar" />

        <Button
            android:id="@+id/buttonFormaMatricial"
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="150sp"
            android:layout_height="fill_parent"
            android:layout_marginRight="10sp"
            android:text="@string/botao_forma_matricial" />

        <Button
            android:id="@+id/buttonReconhecer"
            style="@android:attr/buttonBarButtonStyle"
            android:layout_width="150sp"
            android:layout_height="fill_parent"
            android:layout_marginRight="10sp"
            android:text="@string/botao_reconhecer" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="left|center_vertical"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="150sp"
                android:layout_height="wrap_content"
                android:text="@string/texto_valor_reconhecido" />

            <EditText
                android:id="@+id/editTextValorReconhecido"
                android:layout_width="106dp"
                android:layout_height="fill_parent"
                android:inputType="none" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llCargaRNA"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_progresso_carga_rna" />

            <ProgressBar
                android:id="@+id/pbCargaRNA"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="fill_parent"
                android:layout_height="20dp"
                android:layout_marginTop="6dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>